--- a/src/main/webapp/WEB-INF/html/shop/shopoperation.html
+++ b/src/main/webapp/WEB-INF/html/shop/shopoperation.html
@@ -129,11 +129,11 @@
             </div>
         </div>
     </div>
-
 </div>
 <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
 <script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
-<script type="text/javascript" src="../resources/js/shop/shopoperation.js" charset="UTF-8"/>
+<script type="text/javascript" src="..//resources/js/shop/shopoperation.js" charset="UTF-8"></script>
+<!--这里使用..//才能访问到外面的文件  气死我了-->
 </body>
 </html>
